# agrocore-rs

./: Cargo.toml  Dockerfile.api  Dockerfile.base-build  Dockerfile.service  README.md  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
crates/admin-ui/: Cargo.toml  index.html  tailwind.config.js
crates/admin-ui/src/: api.rs  i18n.rs  main.rs
crates/admin-ui/src/components/: analytics.rs  compliance.rs  dashboard.rs  equipment.rs  finance.rs  livestock.rs  map.rs  mod.rs  orders.rs  resources.rs  settings.rs  setup.rs  sites.rs  users.rs  weather.rs  wizard.rs
crates/api/: Cargo.toml
crates/api/src/: dto.rs  dto_validation_tests.rs  handlers.rs  lib.rs  main.rs  middleware.rs
crates/api/src/handlers/: auth.rs  compliance.rs  equipment.rs  finance.rs  livestock.rs  mod.rs  nutrition.rs  orders.rs  reporting.rs  sites.rs  specialized.rs  system.rs  tasks.rs  users.rs  water.rs  weather.rs  workforce.rs
crates/api/tests/: api_tests.rs
crates/asset-registry/: Cargo.toml
crates/asset-registry/src/: main.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  repositories.rs  validation_tests.rs
crates/domain/src/entities/: compliance.rs  equipment.rs  finance.rs  harvest.rs  livestock.rs  mod.rs  olive.rs  order.rs  plant_protection.rs  site.rs  task.rs  tenant.rs  user.rs  vineyard.rs  water.rs  weather.rs  workforce.rs
crates/domain/src/services/: calculation.rs  mod.rs  nutrition.rs  workflow.rs
crates/geometry-service/: Cargo.toml
crates/geometry-service/src/: main.rs  worker.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/repositories/: auth_utils.rs  base.rs  compliance.rs  equipment.rs  finance.rs  harvest.rs  livestock.rs  mod.rs  olive.rs  order.rs  site.rs  task.rs  tenant.rs  user.rs  vineyard.rs  water.rs  weather.rs  workforce.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/reporting-service/: Cargo.toml
crates/reporting-service/src/: main.rs  worker.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  telemetry.rs
crates/weather-service/: Cargo.toml
crates/weather-service/src/: main.rs  worker.rs
docs/: architecture.md  todos.md  transfer.md
infra/k8s/: api-deployment.yaml  ingress.yaml  worker-deployments.yaml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
systemd_units/: agrocore-api.service  agrocore-reporting.service  agrocore-weather.service
