[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jens Reinemuth <jens@reinemuth.pt>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
jsonwebtoken = "10.4.0"
argon2 = "0.6.0-rc.8"
rand = "0.10.1"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
actix-web-prometheus = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.15"
dotenvy = "0.15"
geo = "0.33"
geojson = "1.0"
rust_xlsxwriter = "0.95.0"
actix-files = "0.6"
futures = "0.3"
async-nats = "0.38"
mockall = "0.13"
