[package]
name = "admin-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8.13" }
serde = { workspace = true }
leptos_icons = "0.6"
icondata = { version = "0.6", features = ["lucide"] }
