[package]
name = "agrocore-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agrocore-domain = { path = "../domain" }
agrocore-infrastructure = { path = "../infrastructure" }
agrocore-shared = { path = "../shared" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }

