[package]
name = "agrocore-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agrocore-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { version = "5", features = ["chrono", "uuid"] }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
