[package]
name = "agrocore-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
failsafe = "1.2"
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
agrocore-domain = { path = "../domain" }
